Fixed problem expanding/collapsing search results when using XHTML (part 2)

--- a/templates/html/search.css
+++ b/templates/html/search.css
@@ -216,7 +216,7 @@ span.SRScope {
     display: none;
 }
 
-DIV.searchresults {
+div.searchresults {
     margin-left: 10px;
     margin-right: 10px;
 }
